--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   },
   "dependencies": {
     "joi": "^10.2.1",
-    "rethinkdbdash": "^2.3.28"
+    "rethinkdbdash": "^2.3.28",
+    "rxjs": "^5.2.0"
   },
   "devDependencies": {
     "coveralls": "^2.11.16",
