--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "requelize",
-  "version": "0.3.1",
+  "version": "0.3.2",
   "description": "RethinkDB ORM",
   "main": "index.js",
   "repository": "https://github.com/buckless/requelize.git",
@@ -18,7 +18,6 @@
   },
   "dependencies": {
     "debug": "^2.6.3",
-    "joi": "^10.2.1",
     "rethinkdbdash": "^2.3.28",
     "rxjs": "^5.2.0"
   },
@@ -28,5 +27,8 @@
     "standard": "^8.6.0",
     "tap-difflet": "^0.7.0",
     "tape": "^4.6.3"
+  },
+  "peerDependencies": {
+    "joi": "10.x"
   }
 }
