--- a/.travis.yml
+++ b/.travis.yml
@@ -7,11 +7,14 @@ node_js:
 addons:
   rethinkdb: '2.3.4'
 
+before_script:
+  - yarn add joi --peer
+
 script:
-  - npm test
+  - yarn test
 
 after_script:
-  - npm run coveralls
+  - yarn run coveralls
 
 deploy:
   provider: npm
