feat(hooks): add more events (#11)
* feat(hooks): add more events

* docs(hooks): update docs

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "requelize",
-  "version": "0.3.2",
+  "version": "0.4.0",
   "description": "RethinkDB ORM",
   "main": "index.js",
   "repository": "https://github.com/buckless/requelize.git",
@@ -29,6 +29,6 @@
     "tape": "^4.6.3"
   },
   "peerDependencies": {
-    "joi": "10.x"
+    "joi": "^10.2.2"
   }
 }
