--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "debug": "^2.6.3",
+    "lodash.isplainobject": "^4.0.6",
     "rethinkdbdash": "^2.3.28",
     "rxjs": "^5.2.0"
   },
